@@ -1,4 +1,4 @@
-/* $OpenBSD: roaming.h,v 1.3 2009/06/21 09:04:03 dtucker Exp $ */
+/* $OpenBSD: roaming.h,v 1.4 2009/06/27 09:32:43 andreas Exp $ */
 /*
  * Copyright (c) 2004-2009 AppGate Network Security AB
  *
@@ -18,15 +18,21 @@
 #ifndef ROAMING_H
 #define ROAMING_H
 
+#define DEFAULT_ROAMBUF 65536
+
 extern int resume_in_progress;
 
+int	get_snd_buf_size(void);
+int	get_recv_buf_size(void);
 void	add_recv_bytes(u_int64_t);
+void	set_out_buffer_size(size_t);
 ssize_t	roaming_write(int, const void *, size_t, int *);
 ssize_t	roaming_read(int, void *, size_t, int *);
 size_t	roaming_atomicio(ssize_t (*)(int, void *, size_t), int, void *, size_t);
 u_int64_t	get_recv_bytes(void);
 u_int64_t	get_sent_bytes(void);
 void	roam_set_bytes(u_int64_t, u_int64_t);
+void	resend_bytes(int, u_int64_t *);
 int	resume_kex(void);
 
 #endif /* ROAMING */
